--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/BOTZ-DHANI/api-dhani-2023#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.11",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
@@ -29,16 +30,19 @@
     "express": "^4.18.1",
     "form-data": "^4.0.0",
     "http-errors": "^2.0.0",
-    "is-url": "^1.2.4",
     "image-url-validator": "^1.0.4",
+    "is-url": "^1.2.4",
+    "jquery": "^3.7.1",
     "jsdom": "^19.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.1",
     "nodemon": "^1.3.3",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "qs": "^6.10.3",
     "secure": "^0.0.1",
-    "ssl-express-www": "^3.0.8",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "ssl-express-www": "^3.0.8"
   }
 }
